Remove self attach